--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -7,29 +7,54 @@
 <script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script>
 <!-- Bootstrap Validator -->
 <script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script>
-
 <!-- swiper js -->
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.js' %}"></script>
 <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-config.js' %}"></script>
+<!-- EZ View JS -->
+<script src="{% static 'assets/vendors/ez-view/EZView.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/draggable.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/ez-conf.js' %}"></script>
+
+<!-- swiper js -->
+<!-- <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.js' %}"></script> -->
+<!-- <script src="{% static 'assets/landing/assets/plugins/swiper/swiper-config.js' %}"></script> -->
+<!-- modernizr js -->
+<!-- <script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script> -->
+<!-- Bootstrap JS -->
+<!-- <script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script> -->
+<!-- wow js -->
+<!-- <script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script> -->
+<!-- Sweet Alert -->
+<!-- <script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script> -->
+<!-- Bootstrap Validator -->
+<!-- <script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script> -->
+<!-- owl.carousel js -->
+<!-- <script src="{% static 'assets/landing/assets/js/owl.carousel.min.js' %}"></script> -->
+<!-- Slick js -->
+<!-- <script src="{% static 'assets/landing/assets/plugins/slick/slick.min.js' %}"></script> -->
+<!-- Magnific popup js -->
+<!-- <script src="{% static 'assets/landing/assets/js/jquery.magnific-popup.min.js' %}"></script> -->
+<!-- Isotope js -->
+<!-- <script src="{% static 'assets/landing/assets/js/isotope.pkgd.min.js' %}"></script> -->
+<!-- main js -->
+<!-- <script src="{% static 'assets/landing/assets/js/main.js' %}"></script> -->
+
 <!-- modernizr js -->
 <script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script>
 <!-- Bootstrap JS -->
 <script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script>
 <!-- wow js -->
 <script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script>
-<!-- Sweet Alert -->
-<script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script>
-<!-- Bootstrap Validator -->
-<script src="{% static 'assets/vendors/bootstrap-validator/validator.js' %}"></script>
 <!-- owl.carousel js -->
 <script src="{% static 'assets/landing/assets/js/owl.carousel.min.js' %}"></script>
 <!-- Slick js -->
 <script src="{% static 'assets/landing/assets/plugins/slick/slick.min.js' %}"></script>
 <!-- Magnific popup js -->
 <script src="{% static 'assets/landing/assets/js/jquery.magnific-popup.min.js' %}"></script>
-<!-- Isotope js -->
-<script src="{% static 'assets/landing/assets/js/isotope.pkgd.min.js' %}"></script>
-<!-- custom js -->
-<script src="{% static 'assets/js/custom.js' %}"></script>
+<!-- Mixitup js -->
+<script src="{% static 'assets/landing/assets/js/mixitup.min.js' %}"></script>
 <!-- main js -->
 <script src="{% static 'assets/landing/assets/js/main.js' %}"></script>
+
+<!-- custom js -->
+<script src="{% static 'assets/js/custom.js' %}"></script>
