--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -1,24 +1,22 @@
 {% load static %}
+
 <!-- Required meta tags -->
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- favicon -->
-<link rel="apple-touch-icon" href="{% static 'assets/landing/img/title.png' %}">
-<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/img/title.png' %}">
+<link rel="apple-touch-icon" href="{% static 'assets/landing/assets/img/favicons/favicon.png' %}">
+<link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/assets/img/favicons/favicon.png' %}">
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
-<!-- Font Awesome CSS -->
-<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-<!-- <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}"> -->
-<link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/font-awesome.min.css' %}">
+<!-- Fort Awesome CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}">
-<!-- <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}"> -->
 <!-- Animate CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/css/animate.css' %}">
 <!-- Owl Carousel CSS -->
@@ -33,16 +31,54 @@
 <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/style.min.css' %}">
 <!-- Responsive CSS -->
 <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/responsive.min.css' %}">
-<!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/custom.css' %}">
-<link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
+
+
+<!-- Required meta tags -->
+<!-- <meta charset="UTF-8"> -->
+<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+
+<!-- favicon -->
+<!-- <link rel="apple-touch-icon" href="{% static 'assets/landing/img/title.png' %}"> -->
+<!-- <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/landing/img/title.png' %}"> -->
+
+<!-- Fonts -->
+<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+<!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet"> -->
+
+<!-- Font Awesome CSS -->
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+<!-- <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}"> -->
+<!-- <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/font-awesome.min.css' %}"> -->
+<!-- Bootstrap CSS -->
+<!-- <link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}"> -->
+<!-- <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}"> -->
+<!-- Animate CSS -->
+<!-- <link rel="stylesheet" href="{% static 'assets/landing/assets/css/animate.css' %}"> -->
+<!-- Owl Carousel CSS -->
+<!-- <link href="{% static 'assets/landing/assets/css/owl.carousel.min.css' %}" rel="stylesheet" /> -->
+<!-- <link href="{% static 'assets/landing/assets/css/owl.theme.default.min.css' %}" rel="stylesheet" /> -->
+<!-- Slick CSS -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/plugins/slick/slick.css' %}"> -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/plugins/slick/slick-theme.css' %}"> -->
+<!-- Magnific Popup CSS -->
+<!-- <link href="{% static 'assets/landing/assets/css/magnific-popup.css' %}" rel="stylesheet" /> -->
+<!-- Style CSS -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/style.min.css' %}"> -->
+<!-- Responsive CSS -->
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/responsive.min.css' %}"> -->
 
 <!-- Swiper CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/plugins/swiper/swiper-bundle.css' %}">
 <link rel="stylesheet" href="{% static 'assets/landing/assets/plugins/swiper/swiper-config.css' %}">
 
+
+<!-- Custom CSS -->
+<link rel="stylesheet" type="text/css" href="{% static 'assets/landing/assets/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
 <!-- jquery latest version -->
 <!-- <script src="{% static 'assets/landing/assets/js/jquery.min.js' %}"></script> -->
-<script src="{% static 'assets/vendors/jquery/jquery.min.js' %}"></script>
+<!-- jquery latest version -->
+<script src="{% static 'assets/landing/assets/js/jquery.min.js' %}"></script>
 
 <title>Auspicious</title>
