--- a/auspicious/templates/page/galleries.html
+++ b/auspicious/templates/page/galleries.html
@@ -49,23 +49,14 @@
                         style="width: 200px; height: 200px;" /> -->
                 </div>
                 {% endfor %}
-
-
-
             </div>
         </div>
     </div>
     <!-- Galleries End -->
-    <br>
 
     {% include "components/footer.html" %}
     {% include "components/scripts.html" %}
-    {% block additional_js %}
-    <!-- EZ View JS -->
-    <script src="{% static 'assets/vendors/ez-view/EZView.js' %}"></script>
-    <script src="{% static 'assets/vendors/ez-view/draggable.js' %}"></script>
-    <script src="{% static 'assets/vendors/ez-view/ez-conf.js' %}"></script>
-    {% endblock %}
+    {% block additional_js %}{% endblock %}
 
 </body>
 </html>
