--- a/auspicious/templates/page/all-jobs.html
+++ b/auspicious/templates/page/all-jobs.html
@@ -32,8 +32,8 @@
                 <div class="col-lg-5 col-md-5 col-12">
                     <div class="breadcrumbs-menu">
                         <ul>
-                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="career.html">
+                            <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="{% url 'all_job_lists' %}">
                                 {% if filtered_job_title %}
                        {{ filtered_job_title }}
                         {% else %}
