--- a/auspicious/templates/page/civil-project.html
+++ b/auspicious/templates/page/civil-project.html
@@ -27,8 +27,8 @@
                 <div class="col-lg-5 col-md-5 col-12">
                     <div class="breadcrumbs-menu">
                         <ul>
-                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="civil-project.html">Civil Project</a></li>
+                            <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="{% url 'civil_project' %}">Civil Project</a></li>
                         </ul>
                     </div>
                 </div>
