--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -84,7 +84,7 @@
                     <a class="nav-link" href="{% url 'career' %}">Career</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'client' %}">Sister & Client Concern</a>
+                    <a class="nav-link" href="{% url 'client' %}">Client & Sister Concern</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'news' %}">News</a>
