--- a/auspicious/templates/page/civil-service.html
+++ b/auspicious/templates/page/civil-service.html
@@ -27,7 +27,7 @@
                     <div class="breadcrumbs-menu">
                         <ul>
                             <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="civil-service.html">Civil Service</a></li>
+                            <li class="active"><a href="{% url 'civil_service' %}">Civil Service</a></li>
                         </ul>
                     </div>
                 </div>
