--- a/auspicious/templates/page/client.html
+++ b/auspicious/templates/page/client.html
@@ -26,8 +26,8 @@
                 <div class="col-lg-5 col-md-5 col-12">
                     <div class="breadcrumbs-menu">
                         <ul>
-                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="client.html">Sister & Client Concern</a></li>
+                            <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="{% url 'client' %}">Client & Sister Concern</a></li>
                         </ul>
                     </div>
                 </div>
