--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -32,7 +32,7 @@
                                 <img src="{% static './assets/landing/assets/img/civil-eng.png' %}" alt="">
                                 <div class="title">
                                     <span>CIVIL</span>
-                                    <p>ENGENEERING</p>
+                                    <p>ENGINEERING</p>
                                 </div>
                             </div>
                         </div>
