--- a/auspicious/templates/page/telecom-service.html
+++ b/auspicious/templates/page/telecom-service.html
@@ -28,8 +28,8 @@
                 <div class="col-lg-5 col-md-5 col-12">
                     <div class="breadcrumbs-menu">
                         <ul>
-                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="telecom-service.html">Telecom Service</a></li>
+                            <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="{% url 'telecom_service' %}">Telecom Service</a></li>
                         </ul>
                     </div>
                 </div>
@@ -45,12 +45,12 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <ul>
-                        <li>Site Acquisltion</li>
+                        <li>Site Acquisition</li>
                         <li>Network Benchmarking Services</li>
-                        <li>Drive test for 2G,3G & 4G</li>
+                        <li>Drive Test for 2G,3G & 4G</li>
                         <li>Survey and Audit (RBS & TXN)</li>
-                        <li>Implemention (RBS & TXN)</li>
-                        <li>End to end IBS Planning and Design</li>
+                        <li>Implementation (RBS & TXN)</li>
+                        <li>End to End IBS Planning and Design</li>
                     </ul>
                 </div>
 
@@ -73,7 +73,7 @@
                 <div class="col-md-4 mb-4">
                     <h5>Supply</h5>
                     <ul>
-                        <li>Base Station Antenna(BSA), RF products like filters, couplers, TMa, Cable, Connectors.</li>
+                        <li>Base Station Antenna(BSA), RF Products like Filters, Couplers, TMA, Cable, Connectors.</li>
                         <li>Drive Test Tools</li>
                         <li>Radio Planning Tools: Planet</li>
                         <li>Transport (Tx) Implementation</li>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="telecome-tool mb-3">
-                        <h5>Telecome Testting Tolls</h5>
+                        <h5>Telecom Testing Tools</h5>
                         <ul>
                             <li>Ber Tester</li>
                             <li>Site Tester</li>
@@ -189,12 +189,12 @@
                             <li>Mentum Planet6.2</li>
                             <li>Site Master</li>
                             <li>Nemo 7.6</li>
-                            <li>Tems Discovery 12</li>
+                            <li>TEMS Discovery 12</li>
                             <li>Actix</li>
                         </ul>
                     </div>
                     <div class="telecome-tool">
-                        <h5>Capable to Arrange Anytimen</h5>
+                        <h5>Capable to Arrange Anytime</h5>
                         <ul>
                             <li>Potable Optimal PIM Tester</li>
                             <li>Frequency Scanner</li>
