--- a/auspicious/templates/page/job-page.html
+++ b/auspicious/templates/page/job-page.html
@@ -46,7 +46,7 @@
 
                     <!-- Company Info -->
                     <div class="company-info">
-                        <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
+                        <img src="{% static 'assets/landing/assets/img/icon.jpg' %}" alt="">
                         <div class="content">
                             <h4>{{ job_qs.job_position }}</h4>
 
