--- a/auspicious/templates/page/career.html
+++ b/auspicious/templates/page/career.html
@@ -102,7 +102,7 @@
                         <!-- Listing -->
                         <a href="{% url 'job_details' slug=last_job_qs.slug %}" class="listing full-time">
                             <div class="listing-logo">
-                                <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
+                                <img src="{% static 'assets/landing/assets/img/icon.jpg' %}" alt="">
                             </div>
                             <div class="listing-title">
                                 <h4>
@@ -136,7 +136,7 @@
                         {% for job in job_lists %}
                         <a href="{% url 'job_details' slug=job.slug %}" class="listing full-time">
                             <div class="listing-logo">
-                                <img src="{% static 'assets/landing/assets/img/job-list-logo-04.png' %}" alt="">
+                                <img src="{% static 'assets/landing/assets/img/icon.jpg' %}" alt="">
                             </div>
                             <div class="listing-title">
                                 <h4>
