--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -30,8 +30,8 @@
                 <div class="col-lg-5 col-md-5 col-12">
                     <div class="breadcrumbs-menu">
                         <ul>
-                            <li><a href="index.html">Home</a><i class="fa fa-angle-double-right"></i></li>
-                            <li class="active"><a href="news.html">News</a></li>
+                            <li><a href="{% url 'home' %}">Home</a><i class="fa fa-angle-double-right"></i></li>
+                            <li class="active"><a href="{% url 'news' %}">News</a></li>
                         </ul>
                     </div>
                 </div>
