--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-md-7 overview">
                     <div class="top-content " style="text-align: justify">
-                        <h3><span>History</span>Overview</h3>
+                        <h3><span style="color:#3492d0;">History</span>Overview</h3>
                         <p><span class="fw-bold">AUSPICIOUS</span> is a fast growing firm bearing motto in mind “Think for the best”. It is configured by some dynamic and potential engineers having good academic background, high quality performance, vast experience & strong ability of liaison.</p>
                         <p>The firm is configured by some experienced and potential engineers & management persons having high quality performance, good reputation and strong ability of liaison. Since inception our dedication and attribution is to achieve and demonstrate whole hearted effort through hard work and relentless pursuit in view to propelling ‘Auspicious’ to make its dream to reality.</p>
                         <p>Capability to understand Customer’s requirement, professionalism, commitment, team work and punctuality are our main strength. We believe in quality and it’s our 1st priority. Our participatory behavior contributed a lot for our achievement.</p>
