--- a/auspicious/templates/page/career.html
+++ b/auspicious/templates/page/career.html
@@ -117,8 +117,8 @@
                                         </span>
                                         {% endif %}
                                     </span>
-
-                                    <span class="listing-type">{{ last_job_qs.job_type }}</span>
+                                    
+                                    <span class="listing-type" style="color: rgb(53, 20, 236);">{{ last_job_qs.job_type }}</span>
                                 </h4>
                                 <ul class="listing-icons">
                                     <li><i class="ln ln-icon-Management"></i>
@@ -163,6 +163,8 @@
                             </div>
                         </a>
                         {% endfor %}
+
+                        
 
                     </div>
                 </div>
