--- a/auspicious/templates/page/project-detail.html
+++ b/auspicious/templates/page/project-detail.html
@@ -43,7 +43,11 @@
                     <div class="blog-details-wrapper">
                         <div class="blog-details-img-date-wrap mb-35 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-details-img">
-                                <img src="{{ project_qs.image.url }}" alt="">
+                                {% if project.image %}
+                                        <img src="{{ project.image.url }}" alt="" style="height: 400px;width: 850px;">
+                                        {% else %}
+                                        <img src="{% static './assets/landing/assets/img/no.jpg' %}" alt="" style="height:400px; width:850px;">
+                                        {% endif %}
                             </div>
                             <div class="blog-details-date">
                                 <h5>{{ project_qs.created_at.date.day }}
